--- a/2/assets/mobirise/css/mbr-additional.css
+++ b/2/assets/mobirise/css/mbr-additional.css
@@ -1123,6 +1123,12 @@ section.lazy-placeholder:after {
   padding-top: 120px;
   padding-bottom: 120px;
 }
+.cid-rWq91V90PT H2 {
+  color: #cccccc;
+}
+.cid-rWq91V90PT H3 {
+  color: #cccccc;
+}
 .cid-rWm9IpCOLT {
   padding-top: 60px;
   padding-bottom: 60px;
